; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/gdiplus/extr_pathiterator.c_test_nextsubpath.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/gdiplus/extr_pathiterator.c_test_nextsubpath.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FillModeAlternate = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@Ok = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_nextsubpath to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_nextsubpath() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = load i32, i32* @FillModeAlternate, align 4
  %9 = call i32 @GdipCreatePath(i32 %8, i32** %1)
  %10 = load i32*, i32** %1, align 8
  %11 = call i32 @GdipCreatePathIter(i32** %2, i32* %10)
  store i32 -2, i32* %6, align 4
  %12 = load i32, i32* @TRUE, align 4
  store i32 %12, i32* %7, align 4
  %13 = load i32*, i32** %2, align 8
  %14 = call i32 @GdipPathIterNextSubpath(i32* %13, i32* %6, i32* %4, i32* %5, i32* %7)
  store i32 %14, i32* %3, align 4
  %15 = load i32, i32* @Ok, align 4
  %16 = load i32, i32* %3, align 4
  %17 = call i32 @expect(i32 %15, i32 %16)
  %18 = load i32, i32* %6, align 4
  %19 = call i32 @expect(i32 0, i32 %18)
  %20 = load i32, i32* @TRUE, align 4
  %21 = load i32, i32* %7, align 4
  %22 = call i32 @expect(i32 %20, i32 %21)
  %23 = load i32*, i32** %2, align 8
  %24 = call i32 @GdipDeletePathIter(i32* %23)
  %25 = load i32*, i32** %1, align 8
  %26 = call i32 @GdipDeletePath(i32* %25)
  ret void
}

declare dso_local i32 @GdipCreatePath(i32, i32**) #1

declare dso_local i32 @GdipCreatePathIter(i32**, i32*) #1

declare dso_local i32 @GdipPathIterNextSubpath(i32*, i32*, i32*, i32*, i32*) #1

declare dso_local i32 @expect(i32, i32) #1

declare dso_local i32 @GdipDeletePathIter(i32*) #1

declare dso_local i32 @GdipDeletePath(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
